# JaxHPM

./: LICENSE  README.md  install.py  pyproject.toml  setup.py
data/CAMELS/h5/SIMBA/CV/CV_0/: parts=64,mesh=64,i=[0,8,16,24,33].h5
data/CAMELS/h5/SIMBA/CV/CV_1/: parts=64,mesh=64,i=[0,8,16,24,33].h5
data/checkpoints/pressure_parts=64,mesh=64.jx/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
data/checkpoints/pressure_parts=64,mesh=64.jx/array_metadatas/: process_0
data/checkpoints/pressure_parts=64,mesh=64.jx/ocdbt.process_0/: manifest.ocdbt
dev/apps/preprocessing/: run_preprocessing.py  submit_esub.sh
dev/apps/training/: create_sweep.py  run_training.py  submit_parallel_sweep_128.sh  submit_parallel_sweep_64.sh
dev/apps/training/configs/: field_loss.yaml  hparams_cnn_128.yaml  hparams_sweep_128.yaml  hparams_sweep_64.yaml  particle_loss.yaml  sim_128.yaml  sim_64.yaml
dev/notes/: perlmutter.md
jaxhpm/: augmentations.py  camels.py  data.py  diagnostics.py  egd.py  hpm.py  kernels.py  nn.py  objectives.py  painting.py  plotting.py  splines.py  training.py  utils.py
notebooks/: demo_64.ipynb
